themes/light/assets/css/style.css
/* ... */
.defaultTable.display_show {
    clear: both;
}

.defaultTable th {
    color: rgb(255, 255, 255);
    text-align: center;
    background-color: rgb(51, 51, 51);
    white-space: nowrap;
}

.defaultTable th,
.defaultTable td {
    border-top: 1px solid rgb(255, 255, 255);
    border-left: 1px solid rgb(255, 255, 255);
    padding: 4px;
}

th.row-seasonheader {
    border: none;
    background-color: rgb(255, 255, 255);
    color: rgb(0, 0, 0);
    padding-top: 15px;
    text-align: left;
}

tr.seasonheader {
    padding-bottom: 5px;
    padding-top: 10px;
    text-align: left;
    border: none;
    color: rgb(255, 255, 255);
}

th.col-checkbox,
td.col-checkbox {
    width: 30px;
    border-left: none;
    text-align: center;
}

th.col-checkbox input[type="checkbox"],
td.col-checkbox input[type="checkbox"] {
    vertical-align: -2px;
}

th.col-metadata,
td.col-metadata {
    width: 28px;
}

th.col-ep,
td.col-ep {
    width: 50px;
    white-space: nowrap;
}

th.col-airdate,
td.col-airdate {
    width: 86px;
    white-space: nowrap;
}

th.col-name,
td.col-name {
    min-width: 100px;
}

td.col-name {
    text-align: left;
}

th.col-footer {
    text-align: left !important;
}

th.col-subtitles,
td.col-subtitles {
    width: 150px;
    text-align: center;
}

th.col-status,
td.col-status {
    text-align: center;
}

@media screen and (min-width: 992px) {
    td.col-status {
        white-space: nowrap;
    }
}

th.col-quality,
td.col-quality {
    width: 110px;
}

th.col-legend,
td.col-legend {
    width: 80px;
}

th.col-search,
td.col-search {
    width: 65px;
}

td.col-date {
    text-align: center;
    white-space: nowrap;
}

td.col-size {
    text-align: center;
    white-space: nowrap;
}

td.col-provider {
    text-align: center;
    white-space: nowrap;
}

td.col-group {
    min-width: 90px;
    text-align: center;
}

.showLegend {
    padding-right: 6px;
    padding-bottom: 1px;
    width: 150px;
}

.input-scene {
    height: 20px;
    line-height: 1.5;
    border-radius: 3px;
}

#editShow {
    width: 700px;
    padding-top: 10px;
    margin-right: auto;
    margin-left: auto;
}

@media (min-width: 768px) {
    .form-group > div.content {
        margin-top: 7px;
        margin-bottom: 0;
        text-align: left;
    }
}

.form-group label.control-label {
    font-size: 13px;
    font-weight: bold;
}

div.season-scene-exception {
    display: inline;
}

#showBanner {
    float: right;
    height: 50px;
    border: 1px solid rgb(136, 136, 136);
}

.fanart {
    margin-top: -1px;
    vertical-align: middle;
}

.showOptions {
    width: 180px;
    float: right;
}

select#select-show {
    display: inline-block;
    height: 25px;
    padding: 1px;
}

button.selectColumns {
    margin-right: 2px;
}

/* =======================================================================
schedule.mako
========================================================================== */

.key {
    line-height: 25px;
}

.listing-key {
    padding: 2px 5px;
    font-size: 13px;
    font-weight: bold;
}

.listing-default {
    background-color: rgb(245, 241, 228);
}

.listing-current {
    background-color: rgb(221, 255, 221);
}

.listing-overdue {
    background-color: rgb(255, 221, 221);
}

.listing-toofar {
    background-color: rgb(190, 222, 237);
}

span.listing-default {
    color: rgb(130, 111, 48);
    border: 1px solid rgb(130, 111, 48);
}

span.listing-current {
    color: rgb(41, 87, 48);
    border: 1px solid rgb(41, 87, 48);
}

span.listing-overdue {
    color: rgb(137, 0, 0);
    border: 1px solid rgb(137, 0, 0);
}

span.listing-toofar {
    color: rgb(29, 80, 104);
    border: 1px solid rgb(29, 80, 104);
}

h2.day,
h2.network {
    margin: 10px 0;
    font-size: 24px;
    line-height: 36px;
    font-weight: bold;
    letter-spacing: 1px;
    color: rgb(255, 255, 255);
    text-align: center;
    text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.3);
    background-color: rgb(51, 51, 51);
}

.tvshowDiv {
    display: block;
    clear: both;
    border: 1px solid rgb(204, 204, 204);
    margin: auto;
    padding: 0;
    text-align: left;
    border-radius: 5px;
    background: rgb(255, 255, 255);
    cursor: default;
    overflow: hidden;
}

.tvshowDiv a:hover {
    color: rgb(66, 139, 202);
}

.tvshowDiv a,
.tvshowDiv a:link,
.tvshowDiv a:visited,
.tvshowDiv a:hover {
    text-decoration: none;
    background: none;
}

.tvshowTitle a {
    color: rgb(0, 0, 0);
    float: left;
    line-height: 1.4em;
    font-size: 1.4em;
    text-shadow: -1px -1px 0 rgb(255, 255, 255);
}

.tvshowTitleIcons {
    float: right;
    padding: 3px 5px;
}

.tvshowDiv td {
    padding: 5px 10px;
}

.tvshowDiv td.next_episode {
    width: 100%;
    height: 90%;
    border-bottom: 1px solid rgb(204, 204, 204);
    vertical-align: top;
    color: rgb(0, 0, 0);
}

.bannerThumb {
    vertical-align: top;
    height: auto;
    width: 748px;
    border-bottom: 1px solid rgb(204, 204, 204);
}

.posterThumb {
    vertical-align: top;
    height: auto;
    width: 180px;
    border-right: 1px solid rgb(204, 204, 204);
}

.ep_listing {
    width: auto;
    border: 1px solid rgb(204, 204, 204);
    margin-bottom: 10px;
    padding: 10px;
}

.ep_summary {
    margin-left: 5px;
    font-style: italic;
}

.ep_summaryTrigger {
    cursor: pointer;
    vertical-align: middle;
}

.ep_summaryTriggerNone {
    opacity: 0.4;
    vertical-align: middle;
}

.calendarWrapper {
    width: 1000px;
    margin: 0 auto;
    padding: 0 3px;
}

.calendarTable {
    float: left;
    width: 142px !important;
    white-space: nowrap;
    table-layout: fixed !important;
}

.calendarShow {
    padding: 0 !important;
}

.calendarShow .poster {
    padding-bottom: 2px;
    height: 212px;
}

.calendarShow .poster img {
    width: 142px;
    height: auto;
}

.calendarShow .text {
    padding: 0 5px 10px;
}

.calendarShow .text .airtime,
.calendarShow .text .episode-title {
    overflow: hidden;
    text-overflow: ellipsis;
    display: block;
    font-size: 11px;
}
/* ... */

